# Test_for_Shift

./: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  app.sh  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: d27360910a74_db_creation.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  router.py  schemas.py  utils.py
tests/: conftest.py  test_auth.py
tests/generators/: user_builder.py
